Few Code Changes

--- a/Senators_Project/senators.html
+++ b/Senators_Project/senators.html
@@ -207,8 +207,9 @@
         <div
           onclick="close_popup()"
           id="popup_background"
-          class="remove_tag"
-        ></div>
+          class="remove_tag">
+        </div>
+
         <dialog id="popupid">
           <div>
             <img id="photo_id" alt="Senator Photo" />
