--- a/Senators_Project/senators.html
+++ b/Senators_Project/senators.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./Styles/styles.css" />
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./Styles/styles.css">
   </head>
   <body id="body" class="zero_margin_padding">
     <div>
@@ -36,7 +32,7 @@
           </ul>
         </div>
         <div id="hamburger_img" style="padding: 4px">
-          <img class="height_20px" src="./Images/hamburger_icon_open.png" />
+          <img class="height_20px" src="./Images/hamburger_icon_open.png">
         </div>
       </header>
 
@@ -55,7 +51,7 @@
           >
             Party
           </p>
-          <hr id="horizontal_rule_id" />
+          <hr id="horizontal_rule_id">
           <div id="total_party_id">
             <div class="container">
               <div id="party_image_id" class="card border_primary">
