Changes to fix Mozila

--- a/Senators_Project/senators.html
+++ b/Senators_Project/senators.html
@@ -41,7 +41,7 @@
 
         <!-- TOTAL PARTY SECTION -->
         <div
-          class="padding_two_per text_align_webkit_center"
+          class="padding_two_per text_align_center"
           name="Total_Party_Section"
           id="Total_Party_Section"
         >
@@ -52,64 +52,66 @@
             Party
           </p>
           <hr id="horizontal_rule_id">
-          <div id="total_party_id">
-            <div class="container">
-              <div id="party_image_id" class="card border_primary">
-                <div class="front">
-                  <img
-                    class="party_class"
-                    src="Images/democratic_logo.png"
-                    alt="democrat logo"
-                  />
-                  <p class="font_size_x_large font_weight_bold old_glory_blue">
-                    Democrat
-                  </p>
-                </div>
-                <div class="back">
-                  <p
-                    id="total_demo"
-                    class="font_size_xx_large font_weight_bold old_glory_blue text_align_center"
-                  ></p>
-                </div>
-              </div>
-            </div>
-            <div class="container">
-              <div id="party_image_id" class="card border_primary">
-                <div class="front">
-                  <img
-                    class="party_class"
-                    src="Images/independent_party_logo.png"
-                    alt="independent logo"
-                  />
-                  <p class="font_size_x_large font_weight_bold old_glory_blue">
-                    Independent
-                  </p>
-                </div>
-                <div class="back">
-                  <p
-                    id="total_indep"
-                    class="font_size_xx_large font_weight_bold old_glory_blue text_align_center"
-                  ></p>
+          <div class="flex_center">
+            <div id="total_party_id">
+              <div class="container">
+                <div id="party_image_id" class="card border_primary">
+                  <div class="front">
+                    <img
+                      class="party_class"
+                      src="Images/democratic_logo.png"
+                      alt="democrat logo"
+                    />
+                    <p class="font_size_x_large font_weight_bold old_glory_blue">
+                      Democrat
+                    </p>
+                  </div>
+                  <div class="back">
+                    <p
+                      id="total_demo"
+                      class="font_size_xx_large font_weight_bold old_glory_blue text_align_center"
+                    ></p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="container">
-              <div id="party_image_id" class="card border_primary">
-                <div class="front">
-                  <img
-                    class="party_class"
-                    src="./Images/republican_logo.png"
-                    alt="republican logo"
-                  />
-                  <p class="font_size_x_large font_weight_bold old_glory_blue">
-                    Republican
-                  </p>
+              <div class="container">
+                <div id="party_image_id" class="card border_primary">
+                  <div class="front">
+                    <img
+                      class="party_class"
+                      src="Images/independent_party_logo.png"
+                      alt="independent logo"
+                    />
+                    <p class="font_size_x_large font_weight_bold old_glory_blue">
+                      Independent
+                    </p>
+                  </div>
+                  <div class="back">
+                    <p
+                      id="total_indep"
+                      class="font_size_xx_large font_weight_bold old_glory_blue text_align_center"
+                    ></p>
+                  </div>
                 </div>
-                <div class="back">
-                  <p
-                    id="total_rep"
-                    class="font_size_xx_large font_weight_bold old_glory_blue text_align_center"
-                  ></p>
+              </div>
+              <div class="container">
+                <div id="party_image_id" class="card border_primary">
+                  <div class="front">
+                    <img
+                      class="party_class"
+                      src="./Images/republican_logo.png"
+                      alt="republican logo"
+                    />
+                    <p class="font_size_x_large font_weight_bold old_glory_blue">
+                      Republican
+                    </p>
+                  </div>
+                  <div class="back">
+                    <p
+                      id="total_rep"
+                      class="font_size_xx_large font_weight_bold old_glory_blue text_align_center"
+                    ></p>
+                  </div>
                 </div>
               </div>
             </div>
