Made changes on Info Errors

--- a/Senators_Project/senators.html
+++ b/Senators_Project/senators.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Senators Project</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./Styles/styles.css">
@@ -32,7 +32,7 @@
           </ul>
         </div>
         <div id="hamburger_img" style="padding: 4px">
-          <img class="height_20px" src="./Images/hamburger_icon_open.png">
+          <img class="height_20px" src="./Images/hamburger_icon_open.png" alt="hamburger_icon_open">
         </div>
       </header>
 
@@ -61,7 +61,7 @@
                       class="party_class"
                       src="Images/democratic_logo.png"
                       alt="democrat logo"
-                    />
+                    >
                     <p class="font_size_x_large font_weight_bold old_glory_blue">
                       Democrat
                     </p>
@@ -81,7 +81,7 @@
                       class="party_class"
                       src="Images/independent_party_logo.png"
                       alt="independent logo"
-                    />
+                    >
                     <p class="font_size_x_large font_weight_bold old_glory_blue">
                       Independent
                     </p>
@@ -101,7 +101,7 @@
                       class="party_class"
                       src="./Images/republican_logo.png"
                       alt="republican logo"
-                    />
+                    >
                     <p class="font_size_x_large font_weight_bold old_glory_blue">
                       Republican
                     </p>
@@ -127,7 +127,7 @@
             >
               Top Leadership
             </p>
-            <hr id="horizontal_rule_id" />
+            <hr id="horizontal_rule_id" >
             <div class="flex_center">
               <div id="top_leadership_id">
                 <div style="max-width: 400px; min-width: 100px">
@@ -152,7 +152,7 @@
             >
               Senator Table
             </p>
-            <hr id="horizontal_rule_id" />
+            <hr id="horizontal_rule_id" >
           </div>
 
           <div class="flex_center" style="gap: 10px">
@@ -168,7 +168,7 @@
                   id="filter_party_input"
                   type="search"
                   placeholder="Party"
-                />
+                >
                 <div id="filter_party_list"></div>
               </div>
 
@@ -179,7 +179,7 @@
                   id="filter_state_input"
                   type="search"
                   placeholder="State"
-                />
+                >
                 <div id="filter_state_list"></div>
               </div>
 
@@ -190,7 +190,7 @@
                   id="filter_rank_input"
                   type="search"
                   placeholder="Rank"
-                />
+                >
                 <div id="filter_rank_list"></div>
               </div>
             </div>
@@ -211,13 +211,13 @@
 
         <dialog id="popupid">
           <div>
-            <img id="photo_id" alt="Senator Photo" />
+            <img id="photo_id" alt="Senator Photo" >
             <img
               id="popup_close"
               src="./Images/close_btn.png"
               alt="Close Icon"
               onclick="close_popup()"
-            />
+            >
             <div style="padding: 20px; text-align: center">
               <div class="padding_two_per">
                 <p class="popup_header">Name</p>
@@ -237,7 +237,7 @@
               </div>
               <div class="flex_center social_media_box">
                 <div class="flex_center">
-                  <img src="./Images/youtube.png" style="height: 30px" alt="" />
+                  <img src="./Images/youtube.png" style="height: 30px" alt="Youtube">
                   <a
                     class="remove_blue_underline nav_bar_text_color"
                     id="youtube_id"
@@ -248,7 +248,7 @@
                   >
                 </div>
                 <div class="flex_center">
-                  <img src="./Images/twitter.png" style="height: 30px" alt="" />
+                  <img src="./Images/twitter.png" style="height: 30px" alt="Twitter">
                   <a
                     class="remove_blue_underline nav_bar_text_color"
                     id="twitter_id"
@@ -259,7 +259,7 @@
                   >
                 </div>
                 <div class="flex_center">
-                  <img src="./Images/link.png" style="height: 30px" alt="" />
+                  <img src="./Images/link.png" style="height: 30px" alt="Link">
                   <a
                     class="remove_blue_underline nav_bar_text_color"
                     id="link_id"
@@ -283,7 +283,7 @@
             >
               About
             </p>
-            <hr id="horizontal_rule_id" />
+            <hr id="horizontal_rule_id" >
           </div>
           <!-- Video - Tag -->
           <div class="text_align_center">
@@ -292,7 +292,7 @@
                 style="z-index: -100"
                 src="./Videos/Virtual_US_Capitol_Tour.mp4"
                 type="video/mp4"
-              />
+              >
               Browser does not support this video.
             </video>
           </div>
