--- a/Senators_Project/senators.html
+++ b/Senators_Project/senators.html
@@ -14,19 +14,19 @@
       <header>
         <div id="nav_bar">
           <ul class="zero_margin_padding nav_bar_links">
-            <li id="nav_bar_link" onclick="add_element_to_view(this)">
+            <li class="nav_bar_link" onclick="add_element_to_view(this)">
               <a class="remove_blue_underline nav_bar_text_color"> Home </a>
             </li>
-            <li id="nav_bar_link" onclick="add_element_to_view(this)">
+            <li class="nav_bar_link" onclick="add_element_to_view(this)">
               <a class="remove_blue_underline nav_bar_text_color"> Party </a>
             </li>
-            <li id="nav_bar_link" onclick="add_element_to_view(this)">
+            <li class="nav_bar_link" onclick="add_element_to_view(this)">
               <a class="remove_blue_underline nav_bar_text_color"> Leaders </a>
             </li>
-            <li id="nav_bar_link" onclick="add_element_to_view(this)">
+            <li class="nav_bar_link" onclick="add_element_to_view(this)">
               <a class="remove_blue_underline nav_bar_text_color"> Senators </a>
             </li>
-            <li id="nav_bar_link" onclick="add_element_to_view(this)">
+            <li class="nav_bar_link" onclick="add_element_to_view(this)">
               <a class="remove_blue_underline nav_bar_text_color"> About </a>
             </li>
           </ul>
