--- a/Senators_Project/senators.html
+++ b/Senators_Project/senators.html
@@ -196,7 +196,7 @@
           </div>
 
           <div class="padding_two_per">
-            <div class="table" id="senators_list_id"></div>
+            <div class="table animate_popup_in" id="senators_list_id"></div>
             <div class="flex_center" id="button_list_id"></div>
           </div>
         </div>
@@ -321,6 +321,7 @@
         </div>
         
       </main>
+      
       <!-- Footer Bar -->
       <footer>
         <div id="footer">
