Few code changes

--- a/Senators_Project/senators.html
+++ b/Senators_Project/senators.html
@@ -219,7 +219,7 @@
               alt="Close Icon"
               onclick="close_popup()"
             >
-            <div style="padding: 20px; text-align: center">
+            <div class="align_self_center">
               <div class="padding_two_per">
                 <p class="popup_header">Name</p>
                 <p id="name_id"></p>
